@@ -653,6 +653,8 @@ JDKBINDIR = $(JDKDIR)/bin
 #CRAY_MIC#PROFILEOPT87 = -DTAU_MIC_LINUX -DTAU_CRAY_MIC #ENDIF#
 
 #DISABLE_MEM_MANAGER#PROFILEOPT106 = -DTAU_DISABLE_MEM_MANAGER #ENDIF#
+#CRAYCNL_PMI#PROFILEOPT107  = -DTAU_CRAYCNL_PMI $(CRAY_PMI_INCLUDE_OPTS) #ENDIF#
+#CRAYCNL_PMI_FOUND#PROFILEOPT107  = -DTAU_CRAY_PMI_FOUND #ENDIF#
 
 MRNET_ROOT=
 MRNET_LW_OPTS=
@@ -1219,7 +1221,7 @@ PROFILEOPTS = $(PROFILEOPT1)  $(PROFILEOPT2)  $(PROFILEOPT3)  $(PROFILEOPT4)  \
               $(PROFILEOPT93) $(PROFILEOPT94) $(PROFILEOPT95) $(PROFILEOPT96) \
               $(PROFILEOPT97) $(PROFILEOPT98) $(PROFILEOPT99) $(PROFILEOPT100) \
 	      $(PROFILEOPT101) $(PROFILEOPT102) $(PROFILEOPT103) \
-              $(PROFILEOPT104) $(PROFILEOPT106) $(TRACEOPT) \
+              $(PROFILEOPT104) $(PROFILEOPT106) $(PROFILEOPT107) $(TRACEOPT) \
 		  $(TAU_SOS_INCLUDE_OPTS) $(TAU_ADIOS_INCLUDE_OPTS) \
 		  $(TAU_OTF2_INCLUDE_OPTS)
 
@@ -1271,6 +1273,7 @@ TAU_INTERNAL_FLAGS = $(TAU_INTERNAL_FLAG1) $(TAU_INTERNAL_FLAG2)
 #PIN#TAU_PIN_LINKER_OPTS= -Wl,--hash-style=sysv $(PIN_ROOT)/intel64/runtime/pincrt/crtbeginS.o -Wl,-Bsymbolic -Wl,--version-script=$(PIN_ROOT)/source/include/pin/pintool.ver -fabi-version=2 -L$(PIN_ROOT)/intel64/runtime/pincrt -L$(PIN_ROOT)/intel64/lib -L$(PIN_ROOT)/intel64/lib-ext -L$(PIN_ROOT)/extras/xed-intel64/lib -lpin -lxed $(PIN_ROOT)/intel64/runtime/pincrt/crtendS.o -lpin3dwarf  -ldl-dynamic -nostdlib -lstlport-dynamic -lm-dynamic -lc-dynamic -lunwind-dynamic #ENDIF#
 OTFLIB=
 #OTF2#TAU_OTF2_LINKER_OPTS = -L$(OTFLIB) -lotf2 -Wl,-rpath,$(OTFLIB) #ENDIF#
+#CRAYCNL_PMI#TAU_LINKER_OPT23=$(CRAY_PMI_POST_LINK_OPTS) -lpmi $(CRAY_XPMEM_POST_LINK_OPTS) -lxpmem -L/opt/cray/ugni/default/lib64 -lugni $(CRAY_UDREG_POST_LINK_OPTS) -ludreg $(CRAY_ALPS_POST_LINK_OPTS) -lalpslli -L/opt/cray/wlm_detect/default/lib64 -lwlm_detect -lalpsutil -lugni #ENDIF#
 ##############################################
 
 TAU_LINKER_OPTS = $(TAU_LINKER_OPT1) $(TAU_LINKER_OPT2) $(TAU_LINKER_OPT3) \
@@ -1281,7 +1284,7 @@ TAU_LINKER_OPTS = $(TAU_LINKER_OPT1) $(TAU_LINKER_OPT2) $(TAU_LINKER_OPT3) \
 		  $(TAU_LINKER_OPT14) $(TAU_LINKER_OPT15) $(TAU_LINKER_OPT16) \
                   $(TAU_LINKER_OPT17) $(TAU_LINKER_OPT18) $(TAU_LINKER_OPT19) \
                   $(TAU_LINKER_OPT20) $(TAU_LINKER_OPT21) $(TAU_LINKER_OPT22) \
-                  $(TAU_CUDA_LINKER_OPTS) $(TAU_PYTHON_LINKER_OPTS)  \
+                  $(TAU_LINKER_OPT23) $(TAU_CUDA_LINKER_OPTS) $(TAU_PYTHON_LINKER_OPTS)  \
                   $(TAU_ANDROID_LINKER_OPTS) $(TAU_BEACON_LINKER_OPTS) \
                   $(TAU_PIN_LINKER_OPTS) \
 				  $(TAU_SOS_LINKER_OPTS) $(TAU_ADIOS_LINKER_OPTS) \
@@ -1336,7 +1339,7 @@ TAU_COMPILER_SUITE_USED=gnu
 #SHMEM#TAU_CRAY_SHMEM_EXTRA_DEFS=-D__float128=float #ENDIF#
 #SHMEM#TAU_CRAY_SHMEM_EXTRA_OPTS=-optPdtCOpts=-D__float128=float  -optPdtCxxOpts=-D__float128=float #ENDIF#
 #CRAYCNL#TAU_COMPILER_EXTRA_OPTIONS4=$(TAU_CRAY_SHMEM_EXTRA_OPTS) #ENDIF#
-TAU_COMPILER_EXTRA_OPTIONS=$(TAU_COMPILER_EXTRA_OPTIONS1) $(TAU_COMPILER_EXTRA_OPTIONS2) $(TAU_COMPILER_EXTRA_OPTIONS3) $(TAU_COMPILER_EXTRA_OPTIONS4)
+TAU_COMPILER_EXTRA_OPTIONS=$(TAU_COMPILER_EXTRA_OPTIONS1) $(TAU_COMPILER_EXTRA_OPTIONS2) $(TAU_COMPILER_EXTRA_OPTIONS3) $(TAU_COMPILER_EXTRA_OPTIONS4) $(TAU_COMPILER_EXTRA_OPTIONS5)
 
 TAU_INCLUDE_MEMORY = -I$(TAU_INC_DIR)/TauMemory
 
