@@ -52,6 +52,7 @@ Version 2.26 changes (from 2.25):
 39. Added support for both OpenSHMEM and MPI simultaneously. With MPI, serial programs now emit a warning. 
 40. Added Pycoolr based GUI for online monitoring. 
 41. Added -DISABLE_MEMORY_MANAGER configuration option. 
+42. Added support for Cray PMI (Process Management Interface) to track topology info for paraprof (configure -PMI). 
 
 Version 2.25 changes (from 2.24):
 1. Support for new PDT parsers cxxparse4101, cparse4101, and gfparse48
